Check column availability before creating index and extend supported index types